# scikit-surgeryopencvcpp

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  INSTALLATION.txt  README.md  README.txt  Usesksurgeryopencvcpp.cmake.in  appveyor.yml  config.sh  setup.py  sksurgeryopencvcppConfig.cmake.in  sksurgeryopencvcppConfigure.h.in  travis_cmake_build.sh  versioneer.py
.github/workflows/: deploy_linux.yml  deploy_mac.yml  deploy_windows.yml
CMake/: CPackOptions.cmake.in  CPackSetup.cmake  CTestContinuous.cmake.in  CTestCustom.cmake.in  FindEigen.cmake  Findgflags.cmake.in  Findglog.cmake.in  StartVS.bat.in  SuperBuild.cmake  sksAddArrayFire.cmake  sksAddBoost.cmake  sksAddDocs.cmake  sksAddEigen.cmake  sksAddFLANN.cmake  sksAddGuiProjects.cmake  sksAddOpenCV.cmake  sksAddPCL.cmake  sksAddPythonBindings.cmake  sksAddUnityWrapper.cmake  sksAddVTK.cmake  sksAddgflags.cmake  sksAddglog.cmake  sksExternalProjectHelperMacros.cmake  sksFunctionFixInstallNameForMac.cmake  sksIncludeArrayFire.cmake  sksIncludeBoost.cmake  sksIncludeCUDA.cmake  sksIncludeDocs.cmake  sksIncludeEigen.cmake  sksIncludeMPI.cmake  sksIncludeOpenCV.cmake  sksIncludeOpenMP.cmake  sksIncludePCL.cmake  sksIncludePythonBindings.cmake  sksIncludeQt.cmake  sksIncludeVTK.cmake  sksIncludegflags.cmake  sksIncludeglog.cmake  sksMacroCreateGuiApplication.cmake  sksMacroInstallCommandLineApp.cmake  (+8 more)
CMake/ExternalProjects/: ArrayFire.cmake  Boost.cmake  Eigen.cmake  FLANN.cmake  OpenCV.cmake  OpenCVContrib.cmake  PCL.cmake  VTK.cmake  gflags.cmake  glog.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  sksMyFirstApp.cpp
Code/GuiApps/: CMakeLists.txt
Code/GuiApps/QMLVTKDemo/: CMakeLists.txt
Code/GuiApps/QMLVTKDemo/App/: main.cpp
Code/GuiApps/QMLVTKDemo/Model/: sksBaseModel.cpp  sksBaseModel.h  sksCubeModel.cpp  sksCubeModel.h  sksTriangleModel.cpp  sksTriangleModel.h
Code/GuiApps/QMLVTKDemo/View/: main.qml  sksQOpenGLTriangleRenderer.cpp  sksQOpenGLTriangleRenderer.h  sksQQuickVTKView.cpp  sksQQuickVTKView.h
Code/GuiApps/QOpenGLDemo/: CMakeLists.txt  main.cpp  sksOpenGLMainWindow.cpp  sksOpenGLMainWindow.h  sksOpenGLWidget.cpp  sksOpenGLWidget.h
Code/GuiApps/QtVTKDemo/: CMakeLists.txt
Code/GuiApps/QtVTKDemo/App/: CMakeLists.txt  main.cpp  sksCentralWidget.cpp  sksCentralWidget.h  sksMainWindow.cpp  sksMainWindow.h
Code/GuiApps/QtVTKDemo/Controller/: CMakeLists.txt  sksControlPanelWidget.cpp  sksControlPanelWidget.h  sksQtVTKControllerWin32ExportHeader.h  sksTwinSliderWidget.cpp  sksTwinSliderWidget.h
Code/GuiApps/QtVTKDemo/Model/: CMakeLists.txt  sksQtVTKModelWin32ExportHeader.h  sksVolumeRenderingModel.cpp  sksVolumeRenderingModel.h
Code/GuiApps/QtVTKDemo/View/: CMakeLists.txt  sksQtVTKViewWin32ExportHeader.h  sksVTKViewWidget.cpp  sksVTKViewWidget.h
Code/Lib/: CMakeLists.txt  sksBasicTypes.cpp  sksBasicTypes.h  sksChArUco.cpp  sksChArUco.h  sksDotDetection.cpp  sksDotDetection.h  sksException.cpp  sksException.h  sksExceptionMacro.h  sksMasking.cpp  sksMasking.h  sksMaths.cpp  sksMaths.h  sksMyFunctions.cpp  sksMyFunctions.h  sksStoyanov2010.cpp  sksStoyanov2010.h  sksTriangulate.cpp  sksTriangulate.h  sksValidate.cpp  sksValidate.h  sksVideoCapture.cpp  sksVideoCapture.h  sksWin32ExportHeader.h
Code/PythonBoost/: CMakeLists.txt  python_docstrings.h  sksLibPython.cpp  sksLibPythonWithOpenCV.cpp
Code/PythonPyBind/: CMakeLists.txt  sksLibPython.cpp
Code/UnityWrapper/: CMakeLists.txt  sksUnityWrapper.cpp  sksUnityWrapper.h
Documentation/: CMakeLists.txt  License.dox  MainPage.dox.in
Testing/: CMakeLists.txt  mpCudaTest.cu  sksBasicTest.cpp  sksCatchMain.cpp  sksCatchMain.h  sksChArUcoTest.cpp  sksCommandLineArgsTest.cpp  sksDotDetectionTest.cpp  sksMaskingTest.cpp  sksMathsTest.cpp  sksStoyanov2010Test.cpp  sksTriangulateTest.cpp
Testing/Data/calib-ucl-circles/: calib.right.intrinsics.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_54_13/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_54_23/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_54_29/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_54_39/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_54_44/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_54_51/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_54_57/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_55_08/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_55_13/: tracking_data.txt
Testing/Data/calib-ucl-circles/snapshots-uncalibrated/08_55_20/: tracking_data.txt
Testing/Data/triangulation/: l2r.txt  left_intrinsic.txt  right_intrinsic.txt
Testing/python/: test_charuco.py  test_dot_detector.py  test_reconstruction.py  test_triangulation.py
Utilities/CppCheck/: SKSURGERYOPENCVCPPCppCheck.cmake
Utilities/Doxygen/: doxygen.config.in  sksurgeryopencvcppdoxygen.pl.in
Utilities/KWStyle/: SKSURGERYOPENCVCPPHeader.h  SKSURGERYOPENCVCPPKWS.xml.in  SKSURGERYOPENCVCPPKWStyle.cmake
